Fixed the footer overlap

--- a/css/style.css
+++ b/css/style.css
@@ -633,3 +633,7 @@ ul.nav-tabs {
 .nav>li>a{
     padding: 5px 15px;
 }
+
+#footer {
+    margin-top: 100%;
+}
